# mSense

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: .gitignore
examples/parabola/: main.py
examples/sellar/: sellar.py
examples/solver/: disciplines.py  main.py
msense/: api.py
msense/cache/: cache.py  factory.py  hdf5_cache.py  memory_cache.py
msense/core/: constants.py  discipline.py  variable.py
msense/jacobians/: jacobian_assembler.py
msense/opt/drivers/: driver.py  factory.py  ipopt_driver.py  scipy_driver.py
msense/opt/problems/: co.py  factory.py  idf.py  mdf.py  opt_problem.py  single_discipline.py
msense/solver/: factory.py  newton_raphson.py  nonlinear_gs.py  nonlinear_jacobi.py  solver.py
msense/utils/: array_and_dict_utils.py  graph_utils.py  jac_utils.py  logging.py
