[metadata]
name = msense

version = 0.0.1

author = Dimitrios Pallas

author_email = mc19054@mail.ntua.gr

url = https://github.com/dlmpal/msense.git

license = MIT License

description = A lightweight framework for Multidisciplinary Analysis and Optimization (MDAO).

long_description = file: README.md

long_description_content_type = text/markdown

keywords= Optimization, MDAO, Multidisciplinary Analysis and Optimization

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy 
    scipy
    h5py
    matplotlib